<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tituloApp"
        android:text="@string/tituloApp"
        android:textColor="@color/textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/guide3"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        />

    <TextView
        android:id="@+id/errortextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintTop_toTopOf="@id/guide10"
        />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textInput"
        android:textColorHint="@color/placeHolder"
        android:textSize="25dp"
        android:inputType="text"
        android:hint="@string/placeHolder"
        app:layout_constraintTop_toTopOf="@id/guide4"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
     />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/btn1"
        android:backgroundTint="@color/btn1"
        android:background="@drawable/estilo_botones"
        app:layout_constraintTop_toBottomOf="@id/guide5"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/btn2"
        android:backgroundTint="@color/btn2"
        android:background="@drawable/estilo_botones"
        app:layout_constraintTop_toBottomOf="@id/guide6"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/btn3"
        android:backgroundTint="@color/btn3"
        android:background="@drawable/estilo_botones"
        app:layout_constraintTop_toBottomOf="@id/guide7"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/btn4"
        android:backgroundTint="@color/btn4"
        android:background="@drawable/estilo_botones"
        app:layout_constraintTop_toBottomOf="@id/guide8"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/btn5"
        android:backgroundTint="@color/btn5"
        android:background="@drawable/estilo_botones"
        app:layout_constraintTop_toBottomOf="@id/guide9"
        app:layout_constraintLeft_toRightOf="@id/guide1"
        app:layout_constraintRight_toLeftOf="@id/guide2"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent= "0.1">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" >
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19">
    </androidx.constraintlayout.widget.Guideline>

</androidx.constraintlayout.widget.ConstraintLayout>